[E] Fix md->org conversion

--- a/spices/cix-unix_land.org
+++ b/spices/cix-unix_land.org
@@ -1,18 +1,19 @@
-<!--
-File          : unix-side.md
+# File           : cix-unix_land.org
+# Created        : <2015-11-04 Wed 22:21:55 GMT>
+# Last Modified  : <2016-11-08 Tue 23:53:44 GMT> sharlatan
+# Author         : sharlatan
+# Maintainer(s)  :
+# Short          :
 
-Created       : Wed 04 Nov 2015 22:21:55
-Last Modified : Mon 01 Aug 2016 23:15:25 sharlatan
-Maintainer    : sharlatan
--->
+#+OPTIONS: num:nil
 
-[[≣](../README.md#Index "Index")]
-# UNIX side #
-This is a list of Unix commands as specified by
-[IEEE Std 1003.1-2008](https://standards.ieee.org/findstds/standard/1003.1-2008.html)
-, which is part of the Single UNIX Specification (SUS). These commands can be found on
-Unix operating systems and most Unix-like operating systems.
+#+TITLE: UNIX Land
 
+This is a list of Unix commands as  specified by [[https://standards.ieee.org/findstds/standard/1003.1-2008.html][IEEE Std 1003.1-2008]] , which is
+part of the Single UNIX Specification (SUS). These commands can be found on Unix
+operating systems and most Unix-like operating systems.
+
+#+BEGIN_EXAMPLE
     ar         - create and maintain library archives
     at         - execute commands at a later time
     bc         - arbitrary-precision arithmetic language
@@ -183,3 +184,4 @@ Unix operating systems and most Unix-like operating systems.
     localedef  - define locale environment
 
     uncompress - expand compressed data
+#+END_EXAMPLE
