--- a/spices/cix-lsof.org
+++ b/spices/cix-lsof.org
@@ -1,12 +1,13 @@
 # File           : cix-lsof.org
 # Created        : <2016-11-05 Sat 23:22:08 GMT>
-# Last Modified  : <2016-11-11 Fri 23:33:01 GMT> sharlatan
+# Last Modified  : <2016-11-12 Sat 00:33:17 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s   :
 # Short          :
 
 #+OPTIONS: num:nil
 
+[[../README.org::*Index][|≣|]]
 #+TITLE: lsof
 /LiSt of Open Files/
 
@@ -62,11 +63,22 @@ system.
      *lsof* helps to watch a directory which *find* working on.
 :   ~ # lsof -Fn -a -c find -d cwd +r 10
 
-
 - lsoff-161106001559 :: List of open port/connections, main option *-i*
 :    ~ # lsoff -i -P -n       # All open connections
 :    ~ # lsoff -i -a -p 1234  # All connections with PID=1234
 :    ~ # lsoff -i tcp:80      # Process licenning port 80
+
+- lsof-161112003215 :: Find out who is using file system when failed to unmount it.
+#+BEGIN_SRC sh
+  MNT_PATH="/path/to/mounting/point"
+
+  if ! umount "$MNT_PATH" 2>/dev/null; then
+      echo "Failed to unmount, check this first"
+      lsof "$MNT_PATH"
+  else
+      echo "Done"
+  fi
+#+END_SRC
 
 **** lsof::files
 #+BEGIN_EXAMPLE
